Fix desktop menu alignment

--- a/style.css
+++ b/style.css
@@ -39,14 +39,14 @@ input[type="checkbox"] {
 }
 
 .menu {
-  width: 75%;
+  width: 83rem;
   margin: -2.5rem auto;
   padding: 0;
 }
 
 .menu li{
   display: inline-block;
-  width: 10rem;
+  width: 8.5rem;
   height: 4.5rem;
 }
 
@@ -57,7 +57,6 @@ input[type="checkbox"] {
   letter-spacing: 0.1rem;
   font-size: 1.2rem;
   padding: 2rem .5rem .5rem;
-  text-indent: 0.8rem;
 }
 
 .menu li a:hover {
@@ -87,7 +86,6 @@ input[type="checkbox"] {
   }
 
   .menu {
-    /*position: absolute;*/
     background-color:#393939;
     left: 0;
     padding: 0;
